--- a/Admision-sim/angular.json
+++ b/Admision-sim/angular.json
@@ -23,7 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              
             ],
             "scripts": []
           },
