--- a/Admision-sim/package.json
+++ b/Admision-sim/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
+    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.4",
