--- a/Admision-sim/angular.json
+++ b/Admision-sim/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "src/styles.css",
               "src/assets/css/bootstrap.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/ngx-toastr/toastr.css"
               
             ],
             "scripts": []
