--- a/Admision-sim/package.json
+++ b/Admision-sim/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
