--- a/Admision-sim/package.json
+++ b/Admision-sim/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
+    "ng-katex": "^2.0.3",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.4",
