--- a/Admision-sim/package.json
+++ b/Admision-sim/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "ngx-pagination": "^6.0.3",
     "ngx-tinymce": "^15.0.0",
     "ngx-toastr": "^16.0.2",
