--- a/Admision-sim/package.json
+++ b/Admision-sim/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.1.2",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
